Fixed About page alignment

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -14,7 +14,7 @@
   /* Font size */
   --font-xlarge: 80px;
   --font-large: 60px;
-  --font-medium: 36px;
+  --font-medium: 32px;
   --font-normal: 24px;
   --font-small: 12px;
 
