--- a/my-app/src/pages/About.css
+++ b/my-app/src/pages/About.css
@@ -1,27 +1,25 @@
 .about {
     background-color: var(--color-black);
     color: var(--color-white);
-    height: calc(100vh - 60px);
+    height: 110vh;
     display: flex;
     position: relative;
     justify-content: center;
     align-items: center;
   }
 
-  .about img{
-    position:absolute;
-    bottom: 0;
-    left: 0;
+  .about img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
 
   .about .text {
+    position:absolute;
     font-size: var(--font-normal);
     text-align: left;
     padding: 20px;
-    margin-left: -900px;
+    margin-left: -500px;
     font-family: 'Work Sans', sans-serif;
     font-weight: var(--weight-extra-bold);
     z-index: 2;
