--- a/my-app/src/pages/Home.css
+++ b/my-app/src/pages/Home.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.cdnfonts.com/css/work-sans');
-
 .home {
     background-color: var(--color-black);
     color: var(--color-white);
-    height: calc(100vh - 76px);
-    display: flex;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     position: relative;
     justify-content: center;
     align-items: center;
@@ -14,8 +13,8 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 75%;
-    height: 95%;
+    width: 70%;
+    height: 90%;
     object-fit: cover;
     z-index: 1;
   }
@@ -24,7 +23,7 @@
     font-size: var(--font-medium);
     text-align: left;
     padding: 20px;
-    margin-left: 950px;
+    margin-left: 120px;
     font-family: 'Work Sans', sans-serif;
     font-weight: var(--weight-extra-bold);
     z-index: 2;
